#3 - added >99% unit test coverage for the server subproject, adjusted some business logic that needed adjusting to make tests pass, updated gradle and lombok, added fancy test printout plugin